--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde_json = "1.0.59"
 assert_approx_eq = "1.1.0"
 rand = "0.8.4"
 smallvec = { version = "1.5.1", features = ["serde"] }
+once_cell = "1.10.0"
