--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ assert_approx_eq = "1.1.0"
 rand = "0.8.4"
 smallvec = { version = "1.5.1", features = ["serde"] }
 once_cell = "1.10.0"
+log = "0.4.14"
+itertools = "0.10.3"
