--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ smallvec = { version = "1.5.1", features = ["serde"] }
 once_cell = "1.10.0"
 log = "0.4.14"
 itertools = "0.10.3"
+serde_json = "1.0.82"
