--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,9 @@ cgmath = { version = "0.18.0", features = ["serde"] }
 smallvec = { version = "1.5.1", features = ["serde"] }
 serde = "1.0.117"
 assert_approx_eq = "1.1.0"
-rand = "0.8.4"
+rand = "0.8.5"
 once_cell = "1.10.0"
 log = "0.4.14"
 itertools = "0.10.3"
 serde_json = "1.0.82"
+rand_distr = "0.4.3"
