--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ log = "0.4.14"
 itertools = "0.10.3"
 serde_json = "1.0.82"
 rand_distr = "0.4.3"
+pathfinding = "3.0.13"
+arrayvec = "0.7.2"
 
 [features]
 serde = ["dep:serde", "cgmath/serde"]
